# MuseJack

./: .gitignore  MuseJack.spec  README.md  pyproject.toml
.github/workflows/: release.yml
musejack/: installer.py  jacksound.py  jacktest.py  main.py  players.py  util.py
resources/: example.mjack  musejackplugin.qml
